--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,12 @@ find_package(catkin REQUIRED COMPONENTS
 
 catkin_python_setup()
 
+add_message_files(
+  FILES
+  UWBAnchor.msg
+  UWBTag.msg
+)
+
 generate_messages(
   DEPENDENCIES
   std_msgs
