--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   message_generation
   sensor_msgs
+  visualization_msgs
 )
 
 catkin_python_setup()
@@ -20,10 +21,11 @@ generate_messages(
   DEPENDENCIES
   std_msgs
   sensor_msgs
+  visualization_msgs
 )
 
 catkin_package(
-  CATKIN_DEPENDS rospy std_msgs message_runtime sensor_msgs
+  CATKIN_DEPENDS rospy std_msgs message_runtime sensor_msgs visualization_msgs
 )
 
 catkin_install_python(
