--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,11 @@ project(ros_dwm1001)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
-  message_generation
   sensor_msgs
   visualization_msgs
 )
 
 catkin_python_setup()
-
-add_message_files(
-  FILES
-  Anchor.msg
-  Tag.msg
-)
 
 generate_messages(
   DEPENDENCIES
@@ -25,7 +18,7 @@ generate_messages(
 )
 
 catkin_package(
-  CATKIN_DEPENDS rospy std_msgs message_runtime sensor_msgs visualization_msgs
+  CATKIN_DEPENDS rospy std_msgs sensor_msgs visualization_msgs
 )
 
 catkin_install_python(
